  * nvidia-driver-libs: Add Recommends: libnvidia-encode1
    (460.91.03-1).  (Closes: #989885)
  * debian/gen-control.pl: Support substitutions in the Vcs-Git field
    (460.91.03-1).
  * Compute and substitute the Git branch instead of hardcoding it
    (460.91.03-1).
  * Generate tight dependencies on libnvidia*-glcore/libnvidia*-eglcore
    (470.57.02-3).
  * Bump watch file version to 4.
  * Bump Standards-Version to 4.6.0. No changes needed.

  [ Vincent Cheng ]
  * Remove myself from Uploaders.

 -- Andreas Beckmann <anbe@debian.org>  Wed, 21 Jul 2021 14:45:24 +0200

nvidia-graphics-drivers (390.144-2) UNRELEASED; urgency=medium

  * Backport drm_device_has_pdev and set_current_state changes from 470.63.01
    to fix kernel module build for Linux 5.14.

 -- Andreas Beckmann <anbe@debian.org>  Mon, 20 Sep 2021 21:13:35 +0200

nvidia-graphics-drivers (390.144-1) UNRELEASED; urgency=medium

  * New upstream legacy branch release 390.144 (2021-07-20).
    * Fixed CVE-2021-1093, CVE-2021-1094, CVE-2021-1095.
      https://nvidia.custhelp.com/app/answers/detail/a_id/5211
    - Worked around a bug in Meson builds of libglvnd 1.3.0 that caused the
      nvidia_icd.json file to be installed in the wrong location.

  [ Andreas Beckmann ]
  * Refresh patches.

 -- Andreas Beckmann <anbe@debian.org>  Wed, 21 Jul 2021 18:15:32 +0200

nvidia-graphics-drivers (390.143-1) UNRELEASED; urgency=medium

  * New upstream legacy branch release 390.143 (2021-04-19).
    * Fixed CVE-2021-1076.
      https://nvidia.custhelp.com/app/answers/detail/a_id/5172
    - Fixed a bug where vkCreateSwapchain could cause the X Server to crash
      when an invalid imageFormat was provided.
    - Fixed a driver installation failure on Linux kernel 5.11 release
      candidates, where the NVIDIA kernel module failed to build with error
      "fatal error: asm/kmap_types.h: No such file or directory".

 -- Andreas Beckmann <anbe@debian.org>  Tue, 20 Apr 2021 02:04:19 +0200
