@@ -1,5 +1,4 @@
 # The NVIDIA license does not allow any form of modification.
-[!amd64]: binary-file-built-without-LFS-support
 exit-in-shared-library
 [i386]: specific-address-in-shared-library
 hardening-no-bindnow
