@@ -1,11 +1,10 @@
 # The NVIDIA license does not allow any form of modification.
-[!amd64]: binary-file-built-without-LFS-support
 hardening-no-bindnow
 hardening-no-fortify-functions
 hardening-no-relro
 
 # Use wildcard instead of exact path substitution, this is a M-A: same package.
-embedded-library usr/lib*/libnvidia-fatbinaryloader.so.#VERSION#: zlib
+embedded-library zlib usr/lib*/libnvidia-fatbinaryloader.so.#VERSION#
 
 # The libnvidia-fatbinaryloader.so.* SONAME changes with every upstream
 # release.
