@@ -1,5 +1,4 @@
 # The NVIDIA license does not allow any form of modification.
-[i386 armhf]: binary-file-built-without-LFS-support
 spelling-error-in-binary
 hardening-no-bindnow
 hardening-no-fortify-functions
