@@ -1,6 +1,5 @@
 # The NVIDIA license does not allow any form of modification.
-[!amd64]: binary-file-built-without-LFS-support
-embedded-library usr/lib/#PRIVATE#/nvidia-debugdump: zlib
+embedded-library zlib usr/lib/#PRIVATE#/nvidia-debugdump
 hardening-no-bindnow
 hardening-no-fortify-functions
 hardening-no-pie
