@@ -20,6 +20,7 @@ nvidia-graphics-drivers (390.144-2+git) UNRELEASED; urgency=medium
     (460.91.03-1).
   * Generate tight dependencies on libnvidia*-glcore/libnvidia*-eglcore
     (470.57.02-3).
+  * Update lintian overrides.
   * Bump watch file version to 4.
   * Bump Standards-Version to 4.6.0. No changes needed.
 
